css/theme.css
/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
    color: #fff;
}

/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
    color: #333;
    text-shadow: none; /* Prevent inheritence from `body` */
    background-color: #fff;
    border: 1px solid #fff;
}


/*
 * Base structure
 */

html,
body {
    height: 100%;
    background-color: #333;
}
body {
    color: #fff;
    text-align: center;
    text-shadow: 0 1px 3px rgba(0,0,0,.5);
    font-family: 'Varela Round', sans-serif;
}

.container-fluid {
    padding-right:0px;
    padding-left:0px;
    padding-top:10px;
    margin-top:20px;
}

.jumbotron{
    background: transparent;
}

.jumbotron p {
    font-family: 'Oswald', sans-serif;
    font-size: 34px;
}

#intro{
    background-image: url('../img/virupaksha-temple.JPG');
    background-size:cover;

    background-position:400px -28px  !important;
    background-attachment:fixed;
}

.mapRow {
    height:200vh;
    background-image:url('../img/hampi-map-vintage.jpg');
    background-size:cover;
    background-position:-30px 0px;
    background-attachment:fixed;
}

#chapter1  .wrap{
    text-align:justify;
    background:transparent;

}

#chapter2{
    background-image: url('../img/hazara-rama.jpg');
    background-size:cover;
    background-position:25vw -5vw;
    background-attachment:fixed;
}

#chapter3{
    background-image: url('../img/chamundi-mysore.jpg');
    background-size:cover;
    background-attachment:fixed;
    background-position:170px 50px !important;

}

#chapter4{
    background-image: url('../img/devaragudda.JPG');
    background-size:cover;
    background-position:215px -170px !important;
    background-attachment:fixed;
}

.wrap{
    background:#000;
    text-align: justify;
    margin-left:25px;
    font-size:20px;
    padding-bottom:15px;
    padding-top:15px;
}
.modal-content {
  background-color: #424242;
}

.aboutRestory {
  border-left:1px solid #ccc;
  font-size:12px;
  margin-top:10px;
  height:28px;
}


.story-image {
    height: auto;
    width: 100%;
    border: 3px solid #ccc;
    cursor: pointer;
}
#lightbox .modal-content {
    display: inline-block;
    text-align: center;
}

#lightbox .close {
    opacity: 1;
    color: #ccc;
    background-color: rgb(42, 42, 42);
    padding: 5px 8px;
    border-radius: 5px;
    border: 1px solid #ccc;
    position: absolute;
    top: 0px;
    left: 0px;

    z-index:1032;
}

.snipit {
    height: 120px;
    margin-bottom:-100px;
    opacity: 0;
    background-color: rgba(0, 0, 0, 0.5);
    border:1px solid #ccc;
    position:relative;
    top: -124px;
    transition-duration: 0.4s;

}

.info-icon {
    /* height: 120px; */
    margin-bottom:-100px;
    opacity: 1;
    /* background-color: rgba(0, 0, 0, 0.5); */
    /* border:1px solid #ccc; */
    position:relative;
    top: -50px;
    transition-duration: 0.4s;
}

.info-icon span {
    height: 25px;
    width: 40px;
    padding: 3px 0 0 9px;
    background-color: rgba(0, 0, 0, 0.5);
}

div.row:hover .info-icon {
    opacity: 0;
}

div.row:hover .snipit {
    opacity: 1;
}
.fullscreen-icon{
  position:relative;
  top:23px;
  width:30px;
  background-color:rgba(0, 0, 0, 0.5);
  height:22px;
  padding-right:6px;
}

.modal-backdrop.in {
  opacity:0;
}
#modal-content, #modal-content a{
    color: #000;
    text-shadow: none;
}

body .modal-open {
    margin-right: 0px;
}
.tradition{
  padding-right:30px;
}

q { quotes: '"' '"' "'" "'" }
q:before { content: open-quote }
q:after  { content: close-quote }


.footer {
  font-size:16px;
  margin-top:-15px;
}

.modal-dialog {
  margin: 0px auto;
}

